{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 114,
  "lineage": "c078b407-d2ef-0b06-549d-0bdeb455b1f4",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sampleapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:796749170281:loadbalancer/app/sampleapp-alb-staging/3c5c7ff6fe7e84bb",
            "arn_suffix": "app/sampleapp-alb-staging/3c5c7ff6fe7e84bb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sampleapp-alb-staging-957522266.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:796749170281:loadbalancer/app/sampleapp-alb-staging/3c5c7ff6fe7e84bb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sampleapp-alb-staging",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b7c5b37ad196209d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06a6d13eab0467569"
              },
              {
                "subnet_id": "subnet-075bc5d34c1d7d3a9"
              }
            ],
            "subnets": [
              "subnet-06a6d13eab0467569",
              "subnet-075bc5d34c1d7d3a9"
            ],
            "tags": {
              "Environment": "staging"
            },
            "tags_all": {
              "Environment": "staging"
            },
            "vpc_id": "vpc-0fafb0feebecf50c0",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:796749170281:listener/app/sampleapp-alb-staging/3c5c7ff6fe7e84bb/c9044075ebc73fa2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:796749170281:targetgroup/sampleapp-http-tg-staging/79c496bef831be2d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:796749170281:listener/app/sampleapp-alb-staging/3c5c7ff6fe7e84bb/c9044075ebc73fa2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:796749170281:loadbalancer/app/sampleapp-alb-staging/3c5c7ff6fe7e84bb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.sampleapp_alb",
            "module.loadbalancer_module.aws_lb_target_group.sampleapp_http_tg",
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sampleapp_http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:796749170281:targetgroup/sampleapp-http-tg-staging/79c496bef831be2d",
            "arn_suffix": "targetgroup/sampleapp-http-tg-staging/79c496bef831be2d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:796749170281:targetgroup/sampleapp-http-tg-staging/79c496bef831be2d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sampleapp-http-tg-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fafb0feebecf50c0"
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:796749170281:security-group/sg-0d1456da1b9650e7e",
            "description": "privatesg for EC2  staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d1456da1b9650e7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7c5b37ad196209d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "privatesg_staging",
            "name_prefix": "",
            "owner_id": "796749170281",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fafb0feebecf50c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:796749170281:security-group/sg-0b7c5b37ad196209d",
            "description": "publicsg for ELB  staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b7c5b37ad196209d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicsg_staging",
            "name_prefix": "",
            "owner_id": "796749170281",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fafb0feebecf50c0"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}